教則グラフの表示実装をしたがなぜか表示されない

--- a/FASystem/FASystem.csproj
+++ b/FASystem/FASystem.csproj
@@ -83,6 +83,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Model\GraphPoint.cs" />
     <Compile Include="ViewModel\TrainingInfoViewModel.cs" />
     <Compile Include="View\SettingWindow.xaml.cs">
       <DependentUpon>SettingWindow.xaml</DependentUpon>
