--- a/FASystem/FASystem.csproj
+++ b/FASystem/FASystem.csproj
@@ -90,6 +90,10 @@
     <Compile Include="View\TrainingListWindow.xaml.cs">
       <DependentUpon>TrainingListWindow.xaml</DependentUpon>
     </Compile>
+    <Page Include="Dictionary.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="View\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
