角度表示用カスタムコントロールのファイルを作成

--- a/FASystem/FASystem.csproj
+++ b/FASystem/FASystem.csproj
@@ -87,6 +87,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="CustomControl\AngleAnnotation.cs" />
     <Compile Include="Helper\CommonConstants.cs" />
     <Compile Include="Helper\Utility.cs" />
     <Compile Include="Model\GraphPoint.cs" />
@@ -98,6 +99,10 @@
     <Page Include="Dictionary.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Themes\Generic.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="View\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
