--- a/FASystem/FASystem.csproj
+++ b/FASystem/FASystem.csproj
@@ -69,6 +69,8 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -87,7 +89,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="CustomControl\AngleAnnotation.cs" />
+    <Compile Include="CustomControl\AngleAnnotation.xaml.cs">
+      <DependentUpon>AngleAnnotation.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Helper\CommonConstants.cs" />
     <Compile Include="Helper\Utility.cs" />
     <Compile Include="Model\GraphPoint.cs" />
@@ -96,6 +100,10 @@
       <DependentUpon>TrainingListWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="Model\ViewportAxesRangeRestriction.cs" />
+    <Page Include="CustomControl\AngleAnnotation.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Dictionary.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
